--- a/Resources/administration/src/module/sw-plugin/component/sw-plugin-store-login/sw-plugin-store-login.twig
+++ b/Resources/administration/src/module/sw-plugin/component/sw-plugin-store-login/sw-plugin-store-login.twig
@@ -1,8 +1,8 @@
-<sw-modal title="Shopware Account Login" variant="small">
+<sw-modal :title="$tc('sw-plugin.store-login.headline')" variant="small">
     <form @submit.prevent="onLoginClick()">
-        <sw-text-field v-model="shopwareId" :label="$tc('shopwareId')"></sw-text-field>
-        <sw-password-field v-model="password" :label="$tc('password')"></sw-password-field>
+        <sw-text-field v-model="shopwareId" :label="$tc('sw-plugin.store-login.labelShopwareId')"></sw-text-field>
+        <sw-password-field v-model="password" :label="$tc('sw-plugin.store-login.labelPassword')"></sw-password-field>
 
-        <sw-button variant="primary" type="submit">Login</sw-button>
+        <sw-button variant="primary" type="submit">{{ $tc('sw-plugin.store-login.buttonLogin') }}</sw-button>
     </form>
 </sw-modal>
