--- a/Resources/administration/src/app/component/base/sw-card/sw-card.scss
+++ b/Resources/administration/src/app/component/base/sw-card/sw-card.scss
@@ -10,6 +10,7 @@ $sw-card-tabs-item-color-background-active: $color-white;
 $sw-card-color-text:                        $color-gutenberg;
 
 .sw-card {
+    height: 100%;
     max-width: 800px;
     margin: 0 auto 40px auto;
     position: relative;
@@ -21,6 +22,7 @@ $sw-card-color-text:                        $color-gutenberg;
 
     &.sw-card--grid {
         .sw-card__content {
+            height: 100%;
             display: grid;
             padding: 0;
         }
