--- a/Resources/administration/src/module/sw-plugin/component/sw-plugin-store-login/sw-plugin-store-login.twig
+++ b/Resources/administration/src/module/sw-plugin/component/sw-plugin-store-login/sw-plugin-store-login.twig
@@ -1,4 +1,4 @@
-<sw-modal :title="$tc('sw-plugin.store-login.headline')" variant="small">
+<sw-modal v-if="showModal" :title="$tc('sw-plugin.store-login.headline')" variant="small" @closeModal="onCloseModal()">
     <form @submit.prevent="onLoginClick()">
         <sw-text-field v-model="shopwareId" :label="$tc('sw-plugin.store-login.labelShopwareId')"></sw-text-field>
         <sw-password-field v-model="password" :label="$tc('sw-plugin.store-login.labelPassword')"></sw-password-field>
