--- a/Resources/administration/src/module/sw-plugin/view/sw-plugin-updates-list/sw-plugin-updates-list.scss
+++ b/Resources/administration/src/module/sw-plugin/view/sw-plugin-updates-list/sw-plugin-updates-list.scss
@@ -2,14 +2,20 @@
     height: 100%;
 
     .top-actions {
-        max-width: 800px;
-        margin: 0 auto 40px auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
     }
 
-    .sw-card {
-        height: 100%;
-        .sw-card__content {
-            height: 100%;
+    .update-context {
+        .highest-version {
+            margin-top: 4px;
+            text-align: right;
         }
+    }
+
+    .version {
+        color: #9aa7be;
     }
 }
