NEXT-1636 - Improve manufacturer test

--- a/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-list/sw-manufacturer-list.html.twig
+++ b/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-list/sw-manufacturer-list.html.twig
@@ -110,7 +110,8 @@
                                                     {% block sw_product_list_grid_columns_actions_edit %}
                                                         <sw-context-menu-item :routerLink="{
                                                                 name: 'sw.manufacturer.detail',
-                                                                params: { id: item.id } }">
+                                                                params: { id: item.id } }"
+                                                                class="sw-manufacturer-list__edit-action">
                                                             {{ $tc('sw-manufacturer.list.contextMenuEdit') }}
                                                         </sw-context-menu-item>
                                                     {% endblock %}
