NTR - Small media sidebar

--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo-metadata-item/sw-media-quickinfo-metadata-item.scss
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo-metadata-item/sw-media-quickinfo-metadata-item.scss
@@ -11,4 +11,8 @@ $sw-metadata-item-caption-color: $color-gutenberg;
 .sw-media-quickinfo-metadata-item__description {
     @include truncate();
     font-size: $font-size-small;
+
+    @media screen and (max-width: 768px) {
+        margin-bottom: 16px;
+    }
 }
